# PerceptronClassifier

./: LICENCE  NeuralNetworks.cabal  Plotting.hs  README  README.md  report.lhs  stack.yaml
data/: artificial.data  hepatitis-mod.data  hepatitis.data  iris2.data  iris3.data  parkinsons.data-ready  simple-test1.data  two-spirals.data  twospirals.c
src/: ConfusionMatrix.hs  Gui.hs  InitialSeparators.hs  Inputs.hs  Main.hs  Networks.hs  NewPlotting.hs  Parsing.hs  Plotting.hs  Poster.hs  Testing.hs  Training.hs  TrainingOld.hs  TrainingOldAugmented.hs  Types.hs  Validation.hs  plots.glade  toplevel.glade
src/Training/: Version1.hs  Version10.hs  Version2.hs  Version3.hs
