name:                NeuralNetworks
version:             1.2
synopsis:            A neural network training algorithm
-- description:         
-- license:             
--license-file:        LICENSE
author:              Denis Torgunov
maintainer:          dtorgunov@leafonthewind.net
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8
data-files: toplevel.glade
data-dir: src

executable NeuralNetworks
  main-is:             Main.hs
  other-modules:     Paths_NeuralNetworks
  build-depends:     QuickCheck
                   , base
                   , containers >= 0.5.6.2
                   , data-default-class >= 0.0.1
                   , gtk >= 0.13.9
                   , Chart
                   , Chart-gtk
                   , lens
                   , colour
                   , mtl >= 2.2.1
                   , parsec
                   , random
  hs-source-dirs:      src